--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: rgb(255, 182, 193);
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
+
+#two {
+    color:hsl(240, 100%, 50%);
+    font-size: 36px;
+}
