--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -11,3 +11,9 @@
 .adjust-font-size {
     font-size: 24px;
 }
+
+#four {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: 700;
+}
